Fri Nov 14 01:03:17 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/envutil.rb: Moved from test/ruby/.

	* test/lib/find_executable.rb: Ditto.

	* test/lib/memory_status.rb: Ditto.

	* test/lib/test/unit.rb: require envutil.

	* test/: Don't require envutil in test files.

Thu Nov 13 21:59:58 2014  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* lib/rexml/document.rb: add REXML::Document#document.
	  reported by Tomas Hoger <thoger@redhat.com> and patched by nahi.

Thu Nov 13 21:51:56 2014  Tanaka Akira  <akr@fsij.org>

	* test/monitor/test_monitor.rb: Use assert_join_threads.

Thu Nov 13 21:45:13 2014  Tanaka Akira  <akr@fsij.org>

	* test/openssl: Don't specify port number.

Thu Nov 13 21:22:35 2014  Tanaka Akira  <akr@fsij.org>

	* test/openssl/ssl_server.rb: Unused file removed.
	  It is not used since r16111, Ruby 1.9.1.

Thu Nov 13 18:50:14 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_ensure): remove obsolete prot_tag comment.  patch by
	  Jack Danger at [ruby-core:66238].  [misc #10502]

Thu Nov 13 18:10:38 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_make_proc_lambda): similar to rb_vm_make_proc() with
	  is_lambda argument.

Thu Nov 13 12:11:18 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* rb_w32_fstat{,i64}: speed up.  adjuting timestamps in this function
	  is to get rid of the side effect of ENV["TZ"].  then, if ENV["TZ"] is
	  not set, no need to adjust.  this change makes File#stat about 60%
	  faster.

Thu Nov 13 11:56:12 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c: include "internal.h" for STATIC_ASSERT.

Thu Nov 13 03:56:38 2014  Eric Wong  <e@80x24.org>

	* gc.c (struct heap_page): trivial packing
	  304 => 296 bytes on x86-64

Wed Nov 12 22:50:12 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gems/bundled_gems: Update to test-unit 3.0.6 and minitest 5.4.3.

Wed Nov 12 22:30:52 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/*: Update to RubyGems 2.4.3 master (7b1f684).
